--- a/CSS/diary.css
+++ b/CSS/diary.css
@@ -8,7 +8,7 @@
 }
 
 textarea{
-    /*background-image: url("file:///C:/Users/prasad/OneDrive/Desktop/VIHAAN%20YUVI's/My%20Diary/Images/diary-page1.jpg");*/
+    background-image: url("../Images/diary-page1.jpg");
     width: 700px;
     height: 980px;
 }
